# accounts

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  inh_accounts_sdk.py  pyproject.toml  settings.example.yaml  settings.schema.yaml
.github/workflows/: build-docker.yaml  deploy.yaml  pre-commit.yaml
src/: config.py  config_schema.py  constants.py  exceptions.py  logging_.py  main.py  mongo_object_id.py  prepare.py  utils.py
src/api/: __main__.py  app.py  dependencies.py  docs.py  lifespan.py  routers.py
src/app/: dependencies.py  routers.py
src/app/oauth/: __init__.py  dependencies.py  dev.py  logout.py  oauth2.py  redirect.py  routes.py
src/app/oauth/innopolis/: __init__.py  routes.py
src/app/oauth/telegram/: __init__.py  dependencies.py  routes.py
src/app/oauth/telegram/templates/: telegram-dummy.jinja2  telegram-widget.jinja2  telegram-widget.js
src/app/users/: routes.py
src/modules/: inh_accounts_sdk.py  logout.py
src/modules/clients/: dependencies.py  repository.py  routes.py  schemas.py
src/modules/oauth/: dependencies.py  routes.py
src/modules/providers/: routes.py
src/modules/providers/email/: repository.py  routes.py
src/modules/providers/innohassle/: routes.py
src/modules/providers/innopolis/: refresher.py  routes.py  schemas.py
src/modules/providers/telegram/: routes.py  schemas.py
src/modules/resources/: repository.py  routes.py  schemas.py
src/modules/smtp/: repository.py
src/modules/smtp/templates/: README.md  verification-code.html  verification-code.mjml
src/modules/telegram_update/: schemas.py  telegram_update_job.py
src/modules/tokens/: dependencies.py  repository.py  routes.py
src/modules/users/: repository.py  routes.py  schemas.py  search.py
src/repositories/clients/: __init__.py  abc.py  repository.py
src/repositories/tokens/: abc.py  repository.py
src/repositories/users/: abc.py  repository.py
src/schemas/: __init__.py  clients.py  oauth2.py  users.py
src/storages/mongo/: __base__.py  models.py
src/storages/sql/: __init__.py  __mixin__.py
src/storages/sql/models/: __init__.py  clients.py  users.py
tests/: test_search_user.py
