[project]
name = "accounts"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "aiolimiter>=1.2.1",
    "authlib>=1.7.2",
    "beanie>=2.1.0,<3.0.0",
    "colorlog>=6.10.1",
    "fastapi>=0.136.3",
    "fastapi-swagger>=0.4.50",
    "gunicorn==26.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "prek>=0.4.1",
    "pydantic[email]>=2.13.4",
    "joserfc>=1.6.7",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "ruff>=0.15.14",
    "uvicorn>=0.48.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
